[gd_scene load_steps=4 format=3 uid="uid://cx0eokfi1stc4"]

[ext_resource type="Script" uid="uid://f1bfi2viwtrk" path="res://scenes/shop/ShopScene.gd" id="1_y0td3"]
[ext_resource type="PackedScene" uid="uid://pjdtf3hky6c6" path="res://scenes/ui/CardPileViewer.tscn" id="2_d8mpu"]
[ext_resource type="Texture2D" uid="uid://dnip28myu7q4x" path="res://art/icons/7.png" id="2_xu4g4"]

[node name="ShopScene" type="Node2D"]
script = ExtResource("1_y0td3")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 4
text = "Obchodník"

[node name="GoldDisplay" type="PanelContainer" parent="CanvasLayer/MainContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/Header/GoldDisplay"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="CanvasLayer/MainContainer/VBoxContainer/Header/GoldDisplay/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Zlato: 100"

[node name="GoldIcon" type="TextureRect" parent="CanvasLayer/MainContainer/VBoxContainer/Header/GoldDisplay/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_xu4g4")

[node name="ItemsPanel" type="PanelContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MainContainer/VBoxContainer/ItemsPanel"]
layout_mode = 2

[node name="ItemsGrid" type="GridContainer" parent="CanvasLayer/MainContainer/VBoxContainer/ItemsPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="ServicesPanel" type="PanelContainer" parent="CanvasLayer/MainContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer/VBoxContainer/ServicesPanel"]
layout_mode = 2

[node name="RemoveCardButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer/ServicesPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Odstranit kartu (75g)"

[node name="LeaveButton" type="Button" parent="CanvasLayer/MainContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Odejít"

[node name="CardPileViewer" parent="CanvasLayer/MainContainer" instance=ExtResource("2_d8mpu")]
unique_name_in_owner = true
visible = false
layout_mode = 2
